<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.localbay.anuragsingh.buyer.BuyerEditProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/profile_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|top"
                android:background="@color/colorBuyerPrimary"
                android:paddingBottom="20dp"
                android:paddingTop="34dp">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/profile_image"
                    android:layout_width="96dp"
                    android:layout_height="96dp"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/user_male"
                    app:civ_border_color="#DDFFFFFF"
                    app:civ_border_width="2dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/update_profile_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/profile_header"
                android:clipToPadding="false"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/usernameWrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/user_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Full Name"
                        android:inputType="textPersonName" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/genderLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/usernameWrapper"
                    android:layout_marginTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="Gender" />

                <View
                    android:id="@+id/genderDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/genderLabel"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:background="#EAEAEA" />

                <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/genderWrapper"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/genderDivider"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/maleGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:text="Male" />

                    <RadioButton
                        android:id="@+id/femaleGender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Female" />
                </RadioGroup>

                <View
                    android:id="@+id/submitDivider"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/genderWrapper"
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#EAEAEA" />

                <Button
                    android:id="@+id/update_buyer_profile_button"
                    android:layout_width="@dimen/btnMinWidth"
                    android:layout_height="@dimen/btnHeight"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/submitDivider"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@color/colorBuyerPrimary"
                    android:paddingLeft="@dimen/horizontal_lg_margin"
                    android:paddingRight="@dimen/horizontal_lg_margin"
                    android:text="Update"
                    android:textColor="#FFF" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/buyerDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/update_profile_form"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:id="@+id/buyer_phone_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer_phone_number_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/buyer_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buyer_phone_label"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_phone_number"
                    android:textColor="@color/colorPrimaryText" />

                <TextView
                    android:id="@+id/buyer_email_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buyer_phone"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:text="@string/buyer_email_label"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/buyer_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/buyer_email_label"
                    android:layout_marginTop="8dp"
                    android:text="@string/default_email"
                    android:textColor="@color/colorPrimaryText" />

                <View
                    android:id="@+id/deactivate_divider"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/buyer_email"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="#EAEAEA"
                    android:paddingTop="@dimen/activity_vertical_margin" />

                <TextView
                    android:id="@+id/deactivate_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/deactivate_divider"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="Deactivate Account"
                    android:textSize="14sp" />

            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="#fff"
        android:visibility="gone" />
</FrameLayout>
